[package]
edition = "2021"
name = "pc-timer"
version = "0.1.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Intel 8253 programming-based timer."
readme = "README.md"
documentation = "https://docs.rs/pc-timer/"
keywords = ["pc", "dos", "ibm", "interrupt", "timer"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/pc-timer"

[dependencies]
pc-ints = "0.1.3"

[badges]
maintenance = { status = "experimental" }
